Fixed MAGETWO-8106: Pagination on Associated Product grid uses images instead of links - Fixed 'actions' column visibility in product variations tab - Fixed pagination in popup

--- a/app/code/core/Mage/Catalog/view/adminhtml/product/product.css
+++ b/app/code/core/Mage/Catalog/view/adminhtml/product/product.css
@@ -563,10 +563,11 @@
 }
 
 #product-variations-matrix .action-choose,
-#product-variations-matrix .action-choose:hover {
+#product-variations-matrix .action-choose:hover,
+#product-variations-matrix .action-choose:disabled {
     color: #b8b3a7;
     float: right;
-    margin: 0 0 0 5px;
+    margin: 6px 0 0 5px;
 }
 
 #product-variations-matrix .action-choose:hover {
