--- a/app/design/adminhtml/default/backend/css/admin.css
+++ b/app/design/adminhtml/default/backend/css/admin.css
@@ -794,7 +794,7 @@ textarea,
 }
 
 select {
-    padding: 4px;
+    padding: 4px 4px 5px;
     margin: 0 0 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
